more performance tweaks, header align fixed

--- a/assets/all.css
+++ b/assets/all.css
@@ -213,14 +213,15 @@ section {
 
 .header__content-logo img {
   width: 15rem;
+  height: auto;
   -webkit-filter: drop-shadow(0px 2px 1px rgba(0, 0, 0, 0.6));
   filter: drop-shadow(0px 2px 1px rgba(0, 0, 0, 0.6));
 }
 
 .header__content-menu {
   -ms-grid-column: 5;
-  -ms-grid-column-span: 5;
-  grid-column: 5 / 10;
+  -ms-grid-column-span: 4;
+  grid-column: 5 / 9;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -289,9 +290,9 @@ section {
 
 .header__content-cart {
   position: relative;
-  -ms-grid-column: 10;
-  -ms-grid-column-span: 3;
-  grid-column: 10 / 13;
+  -ms-grid-column: 9;
+  -ms-grid-column-span: 4;
+  grid-column: 9 / 13;
   cursor: pointer;
   grid-column: 10 / 13;
   -webkit-transform: scale(1);
